--- a/src/css/ElMylar.css
+++ b/src/css/ElMylar.css
@@ -662,6 +662,11 @@ a:hover {
   line-height:1.4;
 }
 
+/* この商品を含むブログリンク */
+a[href^="http://d.hatena.ne.jp/asin/"] {
+  display:none;
+}
+
 /* ==================================================
  * Entry Footer
  * ================================================== */
