--- a/src/css/Corredor.css
+++ b/src/css/Corredor.css
@@ -472,6 +472,7 @@ a:hover {
 #blog-title-inner {
   background-color:#000;
   background-position:left -25px !important;
+  background-size:cover
   height:175px !important;
 }
 
