Bit-Archer のプロフィール欄のスタイルを修正

--- a/src/css/BitArcher.css
+++ b/src/css/BitArcher.css
@@ -201,6 +201,16 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 }
 
 /* ==================================================
+ * Profile Module
+ * ================================================== */
+
+/* .hatena-module-profile */
+
+.hatena-id-link {
+  font-weight:bold;
+}
+
+/* ==================================================
  * Footer
  * ================================================== */
 
