Murga のカテゴリ見出しのスタイルを修正

--- a/src/css/Murga.css
+++ b/src/css/Murga.css
@@ -994,7 +994,7 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
   margin-bottom:30px;
 }
 
-.archive-header-category .archive-heading {
+.archive-heading {
   margin:0 20px;
 }
 
