--- a/src/css/BitArcher.css
+++ b/src/css/BitArcher.css
@@ -3,7 +3,7 @@
 /* </system> */
 
 /*!
- * Neo's World - Bit-Archer - 2017-07-04
+ * Neo's World - Bit-Archer - 2017-10-02
  * http://neo.s21.xrea.com/
  * http://bit-archer.hatenablog.com/
  */
@@ -13,6 +13,27 @@
  * Normalize
  * -------------------------------------------------- */
 
+
+/* ==================================================
+ * Base
+ * ================================================== */
+
+/* Prevent iOS text size adjust after orientation change, without disabling user zoom. */
+html {
+  font-family:sans-serif;
+      -ms-text-size-adjust:100%;
+  -webkit-text-size-adjust:100%;
+  -webkit-overflow-scrolling:touch;
+  scroll-behavior:smooth;  /* ページ内リンクのスムーズスクロール・現時点で Firefox のみ */
+}
+
+body {
+  font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic, "ヒラギノ角ゴ ProN W3", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+  /* Windows の「游ゴシック」は Medium を指定することで font-weight: 500; 指定をしないようにする。これより後ろに「"游ゴシック", "Yu Gothic"」があると Light が使用されてしまう (「"游ゴシック体", YuGothic」は Mac 用で Windows は認識しない) */
+  word-wrap:break-word;  /* 長い英単語も折り返す */
+  cursor:default;
+  -webkit-overflow-scrolling:touch;
+}
 
 /* ==================================================
  * Text-level Semantics
