--- a/src/css/Corredor.css
+++ b/src/css/Corredor.css
@@ -1,5 +1,5 @@
 /*!
- * Neo's World - Corredor - 2017-04-09
+ * Neo's World - Corredor - 2017-10-02
  * http://neo.s21.xrea.com/
  * http://neos21.hatenablog.com/
  */
@@ -22,13 +22,13 @@ html {
       -ms-text-size-adjust:100%;
   -webkit-text-size-adjust:100%;
   -webkit-overflow-scrolling:touch;
-  scroll-behavior: smooth;  /* ページ内リンクのスムーズスクロール・現時点で Firefox のみ */
+  scroll-behavior:smooth;  /* ページ内リンクのスムーズスクロール・現時点で Firefox のみ */
 }
 
 body {
   margin:0;
   color:#000;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic, "ヒラギノ角ゴ ProN W3", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, "Helvetica Neue", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック体", YuGothic, "ヒラギノ角ゴ ProN W3", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
   /* Windows の「游ゴシック」は Medium を指定することで font-weight: 500; 指定をしないようにする。これより後ろに「"游ゴシック", "Yu Gothic"」があると Light が使用されてしまう (「"游ゴシック体", YuGothic」は Mac 用で Windows は認識しない) */
   word-wrap:break-word;  /* 長い英単語も折り返す */
   background:#fff;
@@ -613,7 +613,7 @@ a:hover {
 .entry-content h5,
 .entry-content h6 {
   margin:1.3em 0 0.8em;
-  border-bottom: 1px solid #ddd;
+  border-bottom:1px solid #ddd;
   line-height:1.5;
 }
 
@@ -1069,7 +1069,7 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
   
   /* このサイズで cover にすると下に黒い余白ができるため解除 */
   #blog-title-inner {
-    background-size:auto;
+    background-size:auto !important;
   }
   
 }
@@ -1095,6 +1095,7 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
   /* body.header-image-enable 前提 */
   #blog-title-inner {
     background-position:center -30px !important;
+    background-size:auto !important;
     height:80px !important;
   }
   
