--- a/src/css/BitArcher.css
+++ b/src/css/BitArcher.css
@@ -48,6 +48,10 @@ strong, strong * {
   font-weight:bold;
 }
 
+pre, code {
+  font-family:MeiryoKe_Gothic, "Ricty Diminished", "Courier New", Courier, Consolas, Monaco, Menlo, monospace;
+}
+
 
 /* --------------------------------------------------
  * Page Design
