--- a/src/css/Corredor.css
+++ b/src/css/Corredor.css
@@ -40,10 +40,14 @@ html {
 body {
   margin:0;
   color:#000;
-  font-family:-apple-system, BlinkMacSystemFont, HelveticaNeue, "Helvetica Neue", "Segoe UI", "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   word-wrap:break-word;  /* 長い英単語も折り返す */
   background:#fff;
   cursor:default;
+}
+
+pre, code, kbd, samp, var {
+  font-family:MeiryoKe_Gothic, "Ricty Diminished", "Courier New", Courier, Consolas, Monaco, Menlo, "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", monospace;
 }
 
 /* ==================================================
@@ -677,7 +681,6 @@ a:hover {
   padding:10px;
   border:1px solid #ddd;
   border-radius:3px;
-  font-family:MeiryoKe_Gothic, "Ricty Diminished", "Courier New", Courier, Consolas, Monaco, Menlo, "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", monospace;
   white-space:pre;
   background:#f3f3f3;
 }
@@ -688,7 +691,6 @@ a:hover {
   border:1px solid #ddd;
   border-radius:3px;
   font-size:95%;
-  font-family:MeiryoKe_Gothic, "Ricty Diminished", "Courier New", Courier, Consolas, Monaco, Menlo, "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", monospace;
   background:#f3f3f3;
 }
 
@@ -721,8 +723,8 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 /* 目次記法 */
 .table-of-contents {
   display:inline-block;
-  margin:1em 0;
-  padding:1em 1.5em 1em 2em;
+  margin:1em 0 !important;
+  padding:1em 1.5em 1em 2em !important;
   border:1px solid #ccc;
   background:#f3f3f3;
 }
@@ -737,11 +739,11 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 
 .table-of-contents a {
   color:#07f;
-  text-decoration:underline;
 }
 
 .table-of-contents a:hover {
   color:#f09 !important;
+  text-decoration:underline;
 }
 
 /* Banners */
