--- a/src/css/Corredor.css
+++ b/src/css/Corredor.css
@@ -40,7 +40,7 @@ html {
 body {
   margin:0;
   color:#000;
-  font-family:-apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   word-wrap:break-word;  /* 長い英単語も折り返す */
   background:#fff;
   cursor:default;
@@ -334,7 +334,7 @@ a:hover {
 .entry-footer-section,
 .comment-metadata {
   color:#777;
-  font-size:80%;
+  font-size:85%;
 }
 
 /* ヘッダ・フッタ・自由欄 (AdSense) */
@@ -429,11 +429,11 @@ a:hover {
 .neos21-share i {
   display:block;
   margin:0 0 -5px;
-  font-size:140%;
+  font-size:150%;
 }
 
 .neos21-share span {
-  font-size:70%;
+  font-size:85%;
 }
 
 .neos21-share-hatebu   { background:#006fbb; }
@@ -475,7 +475,8 @@ a:hover {
 #box2 {
   float:right;
   width:350px;
-  font-size:90%;  /* 元は 85% */
+  font-size:90%;
+  line-height:1.5;
 }
 
 /* ==================================================
@@ -608,8 +609,7 @@ a:hover {
 .entry-content {
   padding:0 0 20px;
   border-bottom:1px solid #ddd;
-  font-size:95%;
-  line-height:1.7;
+  line-height:1.8;
 }
 
 .entry-content p {
@@ -867,11 +867,6 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
  * Sidebar
  * ================================================== */
 
-#box2 {
-  font-size:85%;
-  line-height:1.5;
-}
-
 .hatena-module {
   margin:0 0 25px;
 }
@@ -914,7 +909,6 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 }
 
 .profile-description {
-  font-size:90%;
   line-height:1.5;
 }
 
@@ -940,6 +934,7 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 
 /* 最新記事の日付 */
 .urllist-date-link {
+  margin-bottom:4px;
   font-size:90%;
 }
 
@@ -956,6 +951,7 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 /* カテゴリのリンクのみ詰める */
 .hatena-module-category .hatena-urllist li {
   padding:4px 0;
+  font-size:90%;
 }
 
 /* ==================================================
