--- a/src/css/Murga.css
+++ b/src/css/Murga.css
@@ -40,7 +40,7 @@ html {
 body {
   margin:0;
   color:#000;
-  font-family:-apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, "游ゴシック体", YuGothic, "Yu Gothic M", "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN W3", HiraKakuProN-W3, "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ Pro", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
   word-wrap:break-word;  /* 長い英単語も折り返す */
   background:#3d3d3d;
   cursor:default;
@@ -484,7 +484,8 @@ a:hover {
 #box2 {
   float:right;
   width:340px;
-  font-size:90%;  /* 元は 85% */
+  font-size:90%;
+  line-height:1.5;
 }
 
 #box2-inner {
@@ -856,11 +857,6 @@ a[href^="http://d.hatena.ne.jp/asin/"] {
 /* ==================================================
  * Sidebar
  * ================================================== */
-
-#box2 {
-  font-size:85%;
-  line-height:1.5;
-}
 
 .hatena-module {
   margin:0 0 30px;
