--- a/src/css/Corredor.css
+++ b/src/css/Corredor.css
@@ -1,5 +1,5 @@
 /*!
- * Neo's World - Corredor - 2017-10-28
+ * Neo's World - Corredor - 2018-01-04
  * http://neo.s21.xrea.com/
  * http://neos21.hatenablog.com/
  */
@@ -47,7 +47,7 @@ body {
 }
 
 pre, code, kbd, samp, var {
-  font-family:MeiryoKe_Gothic, "Ricty Diminished", "Courier New", Courier, Consolas, Monaco, Menlo, "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", monospace;
+  font-family:MeiryoKe_Gothic, "Ricty Diminished", "Osaka－等幅", "Osaka-等幅", Osaka-mono, "ＭＳ ゴシック", "MS Gothic", "Courier New", Courier, Monaco, Menlo, Consolas, monospace !important;
 }
 
 /* ==================================================
@@ -532,7 +532,7 @@ a:hover {
   top:8px;
   right:3%;
   color:#fff;
-  font-size:120%;
+  font-size:130%;
   display:none;  /* 1カラムの時のみ表示 */
 }
 
