--- a/src/css/Corredor.css
+++ b/src/css/Corredor.css
@@ -578,12 +578,14 @@ a:hover {
 .categories a {
   float:left;
   display:block;
+  height:2.4em;
   margin:0 6px 6px 0;
-  padding:2px 12px;
+  padding:0 12px;
   border:1px solid #ddd;
   border-radius:2px;
   color:#333;
   font-size:80%;
+  line-height:2.4em;
 }
 
 /* 「編集する」ボタン */
